--- a/index.html
+++ b/index.html
@@ -134,7 +134,7 @@
       </span>
     </button>
 
-	<button class="link-button" onclick="loadTool('https://nzdurriez.github.io/commands.html')">
+	<button class="link-button" onclick="loadTool('https://nzdurriez.github.io/StaffQuickAccess/commands.html')">
 	<span class="link-label">
     <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
       <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6l4 2" />
