--- a/index.html
+++ b/index.html
@@ -130,7 +130,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L7 19.25m0 0L4.25 17M7 19.25V9M16 3.75L19.75 7.5M16 3.75L12.25 7.5M16 3.75v12.5" />
         </svg>
-        Civ+ Acceptance Generator
+        Civ+ Accept/Deny Generator
       </span>
     </button>
 
