--- a/index.html
+++ b/index.html
@@ -103,7 +103,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M4 16v1a2 2 0 002 2h12a2 2 0 002-2v-1M12 12v4m0 0v-4m0 4l-2-2m2 2l2-2M4 12h16" />
         </svg>
-        Evidence Generator
+        Evidence Form
       </span>
     </button>
 
@@ -121,7 +121,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16h8M8 12h8m-6 4h6m2-2a9 9 0 11-18 0 9 9 0 0118 0z" />
         </svg>
-        3SP Template Generator
+        3SP Ticket Template
       </span>
     </button>
 
@@ -130,7 +130,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L7 19.25m0 0L4.25 17M7 19.25V9M16 3.75L19.75 7.5M16 3.75L12.25 7.5M16 3.75v12.5" />
         </svg>
-        Civ+ Accept/Deny Generator
+        Civ+ Accept/Deny
       </span>
     </button>
 
