--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h8m-8 4h6m-6 4h4m3 4H5a2 2 0 01-2-2V5a2 2 0 012-2h5l2 2h7a2 2 0 012 2v6" />
         </svg>
-        Ticket Logs
+       Discord Ticket Logs
       </span> ↗
     </button>
 
