--- a/index.html
+++ b/index.html
@@ -148,11 +148,12 @@
 
     <button class="link-button external" onclick="openNewTab('https://tx.bhrp.nz/')">
       <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 10h2a1 1 0 011 1v2a1 1 0 01-1 1H3m6 0h6m-3-3v6m0 0a9 9 0 110-18 9 9 0 010 18z" />
-        </svg>
-        TXAdmin Panel
-      </span> ↗
+  	<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="20" height="20">
+    	<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
+      	d="M3 3h7v7H3V3zm0 11h7v7H3v-7zm11-11h7v7h-7V3zm0 11h7v7h-7v-7z" />
+  	</svg>
+  	TXAdmin Panel
+	</span> ↗
     </button>
 
     <button class="link-button external" onclick="openNewTab('https://docs.google.com/spreadsheets/d/1GWJWGaOomAAzSH5B8wvqd0k7g0yfIpdrS0RzSYjzweQ/edit?usp=sharing')">
