--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       height: 100vh;
       display: flex;
     }
-
     .sidebar {
       width: 280px;
       background-color: #2a2a2a;
@@ -23,13 +22,11 @@
       display: flex;
       flex-direction: column;
     }
-
     .sidebar h1 {
       color: orange;
       margin-bottom: 25px;
       font-size: 22px;
     }
-
     .sidebar h2 {
       font-size: 16px;
       color: #ccc;
@@ -37,7 +34,6 @@
       border-top: 1px solid #444;
       padding-top: 10px;
     }
-
     .link-button {
       background-color: #444;
       color: white;
@@ -53,38 +49,31 @@
       justify-content: space-between;
       align-items: center;
     }
-
     .link-button:hover {
       background-color: #666;
     }
-
     .external {
       background-color: #374151;
     }
-
     .external:hover {
       background-color: #4b5563;
     }
-
     .link-label {
       display: flex;
       align-items: center;
       gap: 10px;
     }
-
     .link-label svg {
       width: 20px;
       height: 20px;
       stroke: white;
     }
-
     .preview {
       flex-grow: 1;
       border: none;
       width: 100%;
       height: 100vh;
     }
-
     .content {
       flex-grow: 1;
       display: flex;
@@ -134,26 +123,34 @@
       </span>
     </button>
 
-	<button class="link-button" onclick="loadTool('https://nzdurriez.github.io/StaffQuickAccess/commands.html')">
-	<span class="link-label">
-    <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-      <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6l4 2" />
-    </svg>
-    Ingame & Discord Commands
-	</span>
-	</button>
+    <button class="link-button" onclick="loadTool('https://nzdurriez.github.io/PunishmentGuidelinesStaff/')">
+      <span class="link-label">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.75 17L7 19.25m0 0L4.25 17M7 19.25V9M16 3.75L19.75 7.5M16 3.75L12.25 7.5M16 3.75v12.5" />
+        </svg>
+        Punishment Guidelines
+      </span>
+    </button>
+
+    <button class="link-button" onclick="loadTool('https://nzdurriez.github.io/StaffQuickAccess/commands.html')">
+      <span class="link-label">
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6l4 2" />
+        </svg>
+        Ingame & Discord Commands
+      </span>
+    </button>
 
     <!-- External Tools -->
     <h2>External Tools</h2>
 
     <button class="link-button external" onclick="openNewTab('https://tx.bhrp.nz/')">
       <span class="link-label">
-  	<svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="20" height="20">
-    	<path stroke-linecap="round" stroke-linejoin="round" stroke-width="2"
-      	d="M3 3h7v7H3V3zm0 11h7v7H3v-7zm11-11h7v7h-7V3zm0 11h7v7h-7v-7z" />
-  	</svg>
-  	TXAdmin Panel
-	</span> ↗
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="20" height="20">
+          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h7v7H3V3zm0 11h7v7H3v-7zm11-11h7v7h-7V3zm0 11h7v7h-7v-7z" />
+        </svg>
+        TXAdmin Panel
+      </span> ↗
     </button>
 
     <button class="link-button external" onclick="openNewTab('https://docs.google.com/spreadsheets/d/1GWJWGaOomAAzSH5B8wvqd0k7g0yfIpdrS0RzSYjzweQ/edit?usp=sharing')">
@@ -179,7 +176,7 @@
         <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
           <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h8m-8 4h6m-6 4h4m3 4H5a2 2 0 01-2-2V5a2 2 0 012-2h5l2 2h7a2 2 0 012 2v6" />
         </svg>
-       Discord Ticket Logs
+        Discord Ticket Logs
       </span> ↗
     </button>
 
@@ -201,7 +198,6 @@
     function loadTool(url) {
       document.getElementById('preview').src = url;
     }
-
     function openNewTab(url) {
       window.open(url, '_blank');
     }
