--- a/index.html
+++ b/index.html
@@ -68,138 +68,94 @@
       height: 20px;
       stroke: white;
     }
-    .preview {
+    .iframes {
       flex-grow: 1;
-      border: none;
       width: 100%;
       height: 100vh;
+      position: relative;
     }
-    .content {
-      flex-grow: 1;
-      display: flex;
-      flex-direction: column;
+    .tool-frame {
+      position: absolute;
+      border: none;
+      width: 100%;
+      height: 100%;
+      display: none;
+    }
+    .tool-frame.active {
+      display: block;
     }
   </style>
 </head>
 <body>
-
   <div class="sidebar">
     <h1>Staff Tool Hub</h1>
-
-    <!-- Internal Tools -->
-    <button class="link-button" onclick="loadTool('https://nzdurriez.github.io/EvidenceGenerator/')">
+    <button class="link-button" onclick="showTool('tool-evidence')">
       <span class="link-label">
-      <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-      <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25m0 12.75h7.5m-7.5 3H12M10.5 2.25H5.625c-.621 0-1.125.504-1.125 1.125v17.25c0 .621.504 1.125 1.125 1.125h12.75c.621 0 1.125-.504 1.125-1.125V11.25a9 9 0 0 0-9-9Z" />
-      </svg>
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M19.5 14.25v-2.625a3.375 3.375 0 0 0-3.375-3.375h-1.5A1.125 1.125 0 0 1 13.5 7.125v-1.5a3.375 3.375 0 0 0-3.375-3.375H8.25"/>
+        </svg>
         Evidence Form
       </span>
     </button>
-
-    <button class="link-button" onclick="loadTool('https://nzdurriez.github.io/BanAppealTemplate/')">
+    <button class="link-button" onclick="showTool('tool-ban')">
       <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M18.364 5.636l-1.414 1.414m0 0a9 9 0 11-2.828-2.828l1.414-1.414a1 1 0 011.414 0l1.414 1.414a1 1 0 010 1.414z" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M18.364 5.636l-1.414 1.414a9 9 0 11-2.828-2.828l1.414-1.414"/>
         </svg>
         Ban Appeal Template
       </span>
     </button>
-
-    <button class="link-button" onclick="loadTool('https://nzdurriez.github.io/3SP-Template-Auto/')">
+    <button class="link-button" onclick="showTool('tool-3sp')">
       <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 16h8M8 12h8m-6 4h6m2-2a9 9 0 11-18 0 9 9 0 0118 0z" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M8 16h8M8 12h8m-6 4h6m2-2a9 9 0 11-18 0 9 9 0 0118 0z"/>
         </svg>
         3SP Ticket Template
       </span>
     </button>
-
-    <button class="link-button" onclick="loadTool('https://nzdurriez.github.io/CIV-Acceptance/')">
+    <button class="link-button" onclick="showTool('tool-civ')">
       <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v3m0 0v3m0-3h3m-3 0h-3m-2.25-4.125a3.375 3.375 0 1 1-6.75 0 3.375 3.375 0 0 1 6.75 0ZM3 19.235v-.11a6.375 6.375 0 0 1 12.75 0v.109A12.318 12.318 0 0 1 9.374 21c-2.331 0-4.512-.645-6.374-1.766Z" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M18 7.5v6m-6-6a3.375 3.375 0 1 1-6.75 0"/>
         </svg>
         Civ+ Accept/Deny
       </span>
     </button>
-
-    <button class="link-button" onclick="loadTool('https://nzdurriez.github.io/PunishmentGuidelinesStaff/')">
+    <button class="link-button" onclick="showTool('tool-punishment')">
       <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" class="size-6">
-        <path stroke-linecap="round" stroke-linejoin="round" d="M4.26 10.147a60.438 60.438 0 0 0-.491 6.347A48.62 48.62 0 0 1 12 20.904a48.62 48.62 0 0 1 8.232-4.41 60.46 60.46 0 0 0-.491-6.347m-15.482 0a50.636 50.636 0 0 0-2.658-.813A59.906 59.906 0 0 1 12 3.493a59.903 59.903 0 0 1 10.399 5.84c-.896.248-1.783.52-2.658.814m-15.482 0A50.717 50.717 0 0 1 12 13.489a50.702 50.702 0 0 1 7.74-3.342M6.75 15a.75.75 0 1 0 0-1.5.75.75 0 0 0 0 1.5Zm0 0v-3.675A55.378 55.378 0 0 1 12 8.443m-7.007 11.55A5.981 5.981 0 0 0 6.75 15.75v-1.5" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M6.75 15a.75.75 0 1 0 0-1.5"/>
         </svg>
         Punishment Guidelines
       </span>
     </button>
-
-    <button class="link-button" onclick="loadTool('https://nzdurriez.github.io/StaffQuickAccess/commands.html')">
+    <button class="link-button" onclick="showTool('tool-commands')">
       <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 6v6l4 2" />
+        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
+          <path stroke-linecap="round" stroke-linejoin="round" d="M12 6v6l4 2"/>
         </svg>
         Ingame & Discord Commands
       </span>
     </button>
-
-    <!-- External Tools -->
     <h2>External Tools</h2>
-
-    <button class="link-button external" onclick="openNewTab('https://tx.bhrp.nz/')">
-      <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor" width="20" height="20">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 3h7v7H3V3zm0 11h7v7H3v-7zm11-11h7v7h-7V3zm0 11h7v7h-7v-7z" />
-        </svg>
-        TXAdmin Panel
-      </span> ↗
-    </button>
-
-    <button class="link-button external" onclick="openNewTab('https://docs.google.com/spreadsheets/d/1GWJWGaOomAAzSH5B8wvqd0k7g0yfIpdrS0RzSYjzweQ/edit?usp=sharing')">
-      <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9 17v-6m4 6v-4m4 4v-2m4 6H3a1 1 0 01-1-1V3a1 1 0 011-1h18a1 1 0 011 1v18a1 1 0 01-1 1z" />
-        </svg>
-        3SP Tracking Portal
-      </span> ↗
-    </button>
-
-    <button class="link-button external" onclick="openNewTab('https://www.beehiverp.com/topic/1949-fivepd-rules/#comment-3383')">
-      <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 10h.01M12 10h.01M16 10h.01M21 14v4a2 2 0 01-2 2H5a2 2 0 01-2-2v-4M5 10V5a2 2 0 012-2h10a2 2 0 012 2v5" />
-        </svg>
-        Server Rules
-      </span> ↗
-    </button>
-
-    <button class="link-button external" onclick="openNewTab('https://dashboard.ticketsbot.cloud/manage/815563382211739670/transcripts')">
-      <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h8m-8 4h6m-6 4h4m3 4H5a2 2 0 01-2-2V5a2 2 0 012-2h5l2 2h7a2 2 0 012 2v6" />
-        </svg>
-        Discord Ticket Logs
-      </span> ↗
-    </button>
-
-    <button class="link-button external" onclick="openNewTab('https://docs.google.com/document/d/1mLfbfBX1cTTuX597CL-6o1_hlk-py783miehExjXAtQ/edit?tab=t.0')">
-      <span class="link-label">
-        <svg xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
-          <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 8h10M7 12h6m-6 4h10M4 6h16a1 1 0 011 1v14a1 1 0 01-1 1H4a1 1 0 01-1-1V7a1 1 0 011-1z" />
-        </svg>
-        Staff SOPs
-      </span> ↗
+    <button class="link-button external" onclick="window.open('https://tx.bhrp.nz/', '_blank')">
+      <span class="link-label">TXAdmin Panel</span> ↗
     </button>
   </div>
 
-  <div class="content">
-    <iframe id="preview" class="preview" src=""></iframe>
+  <div class="iframes">
+    <iframe id="tool-evidence" class="tool-frame" src="https://nzdurriez.github.io/EvidenceGenerator/"></iframe>
+    <iframe id="tool-ban" class="tool-frame" src="https://nzdurriez.github.io/BanAppealTemplate/"></iframe>
+    <iframe id="tool-3sp" class="tool-frame" src="https://nzdurriez.github.io/3SP-Template-Auto/"></iframe>
+    <iframe id="tool-civ" class="tool-frame" src="https://nzdurriez.github.io/CIV-Acceptance/"></iframe>
+    <iframe id="tool-punishment" class="tool-frame" src="https://nzdurriez.github.io/PunishmentGuidelinesStaff/"></iframe>
+    <iframe id="tool-commands" class="tool-frame" src="https://nzdurriez.github.io/StaffQuickAccess/commands.html"></iframe>
   </div>
 
   <script>
-    function loadTool(url) {
-      document.getElementById('preview').src = url;
-    }
-    function openNewTab(url) {
-      window.open(url, '_blank');
+    function showTool(id) {
+      document.querySelectorAll('.tool-frame').forEach(el => el.classList.remove('active'));
+      document.getElementById(id).classList.add('active');
     }
   </script>
 </body>
