--- a/index.html
+++ b/index.html
@@ -6,12 +6,13 @@
   <link rel="icon" type="image/svg+xml" href="hub-icon.svg" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <style>
-    body {
+    html, body {
       margin: 0;
+      padding: 0;
       font-family: Arial, sans-serif;
       background-color: #1e1e1e;
       color: white;
-      height: 100vh;
+      height: 100%;
       display: flex;
       overflow: hidden;
     }
@@ -88,7 +89,7 @@
     .iframes {
       flex-grow: 1;
       width: 100%;
-      height: 100vh;
+      height: 100%;
       position: relative;
     }
 
@@ -143,7 +144,7 @@
 </head>
 <body>
 
-  <div class="sidebar">
+    <div class="sidebar">
     <h1>Staff Tool Hub</h1>
 
     <!-- Internal Tools -->
