--- a/index.html
+++ b/index.html
@@ -87,29 +87,34 @@
     }
 
     .iframes {
-      flex-grow: 1;
-      width: 100%;
-      height: 100%;
-      position: relative;
-    }
+	flex-grow: 1;
+	width: 100%;
+	height: 100%;
+	position: relative;
+	overflow: hidden; /* Prevents scrollbar from iframe overflow */
+	}
 
-    .tool-frame {
-      position: absolute;
-      border: none;
-      width: 100%;
-      height: 100%;
-      display: none;
-      overflow: auto;
-      scrollbar-width: none;
-    }
+	.tool-frame {
+	position: absolute;
+	top: 0;
+	left: 0;
+	border: none;
+	width: 100%;
+	height: 100%;
+	display: none;
+	overflow: hidden; /* Prevents scrollbars inside iframe */
+	scrollbar-width: none;
+	box-sizing: border-box;
+	}
 
-    .tool-frame::-webkit-scrollbar {
-      display: none;
-    }
+	.tool-frame::-webkit-scrollbar {
+	display: none;
+	}
 
-    .tool-frame.active {
-      display: block;
-    }
+	.tool-frame.active {
+	display: block;
+	}
+
 
     .refresh-icon {
       position: absolute;
